

export class MedicalContraindication extends MedicalEntity {


}
